fixed layout issues in IE

--- a/public/stylesheets/ringtings.css
+++ b/public/stylesheets/ringtings.css
@@ -245,10 +245,6 @@ div.step_box {
   height: 125px;
 }
 
-.ivr_main_box {
-}
-
-
 .ivr_title {
   text-align: left;
   font-size: 1.5em;
@@ -265,6 +261,7 @@ div.step_box {
   margin:auto;
   width: 375px;
   border: 3px solid #000000;
+  height: 800px;
 }
 
 .text_padding {
@@ -285,17 +282,22 @@ div.step_box {
   padding-bottom:3px;
 }
 
+.ivr_row {
+  height: 85px;
+}
 .ivr_step {
   height: 85px;
   width: 98px;
   background-image: url('/images/ivr_step.png');
   background-repeat: no-repeat;
-  background-position: right;
+  background-position: right top;
+  float: left;
 }
 
 .ivr_end {
   width: 168px;
   height: 70px;
+  float: left;
   background-image: url('/images/ivr_end.png');
   background-repeat: no-repeat;
   background-position: right top;
@@ -303,12 +305,8 @@ div.step_box {
 
 #add_menu_option_submit_image {
   position: relative;
-  top: -70px;
+  top: 20px;
   left: 28px;
-}
-
-.ivr_row {
-  display: inline;
 }
 
 .form_errors {
@@ -318,7 +316,6 @@ div.step_box {
 
 .ivr_step_action {
   position: relative;
-  top: -80px;
   float: right;
   font-size: 1.2em;
   text-align: left;
@@ -366,10 +363,9 @@ div.step_box {
 
 .save_button {
   position: relative;
-  width: 400px;
   float: right;
-  left: 150px;
-  top: -30px;
+  left: -50px;
+  top: 20px;
 }
 
 #hideme {
